--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -1,9 +1,12 @@
-.navbar{
-    display:flex;
-    justify-content:space-around;
-    padding:5px;
-    box-shadow: 0 1px 3px -2px black;
-    align-items:center;
+.navbar-nav{
+   gap: 20px !important;
+   margin: 0 auto !important;
+ 
+}
+
+.nav-item a {
+    color: #ff4141 !important;
+    font-weight: 600;
 }
 
 .nav-logo{
@@ -50,6 +53,15 @@
     display:flex;
     align-items:center;
     gap:10px;
+}
+
+.login-btn {
+    background-color: #ff4141;
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 40px;
+    font-weight: 600;
+    border-radius: 20px;
 }
 
 .nav-login-cart button{
